# tools.lua

./: Cargo.toml  build.rs  luajit.patch
.github/workflows/: development.yml
codegen/: Cargo.toml
codegen/src/: lib.rs
codegen/src/parser/: enums.rs  interface.rs  mod.rs  structs.rs
core/: Cargo.toml  build.rs
core/src/: lib.rs  module.rs  util.rs
core/src/ffi/: ext.rs  jit.rs  laux.rs  lua.rs  mod.rs
core/src/libs/: interface.rs  mod.rs
core/src/libs/files/: chroot.rs  file.rs  interface.rs  lib.rs  mod.rs  path.rs
core/src/libs/lua/: base.rs  call.rs  debug.rs  load.rs  mod.rs  module.rs  options.rs  require.rs  table.rs
core/src/libs/os/: base.rs  compat.rs  instant.rs  mod.rs  time.rs
core/src/libs/util/: mod.rs  num.rs  string.rs  table.rs  utf8.rs
core/src/macro/: closure.rs  lib_func.rs  mod.rs  userdata.rs  userdata_func.rs
core/src/macros/: closure.rs  impl_from_param.rs  lib_func.rs  mod.rs  userdata.rs  userdata_func.rs
core/src/module/: error.rs  mod.rs
core/src/util/: core.rs  function.rs  method.rs  mod.rs  module.rs  namespace.rs  thread.rs
core/src/vm/: core.rs  error.rs  mod.rs  namespace.rs  thread.rs  userdata.rs  util.rs
core/src/vm/closure/: arc.rs  context.rs  context2.rs  core.rs  interface.rs  mod.rs  rc.rs  rust.rs  types.rs
core/src/vm/core/: debug.rs  destructor.rs  interface.rs  iter.rs  jit.rs  load.rs  mod.rs  root_vm.rs  util.rs  vm.rs
core/src/vm/core/interrupt/: mod.rs  unix.rs  vm.rs  windows.rs
core/src/vm/core/root_vm/: common.rs  mod.rs  send.rs  unsend.rs
core/src/vm/function/: core.rs  interface.rs  mod.rs  types.rs
core/src/vm/registry/: core.rs  interface.rs  lua_ref.rs  mod.rs  named.rs  send_key.rs  types.rs
core/src/vm/table/: core.rs  immutable.rs  interface.rs  iter.rs  mod.rs  scope.rs  traits.rs
core/src/vm/thread/: core.rs  interface.rs  mod.rs  value.rs
core/src/vm/userdata/: any.rs  case.rs  core.rs  error.rs  interface.rs  mod.rs  util.rs
core/src/vm/value/: any.rs  core.rs  function.rs  integer53.rs  interface.rs  mod.rs  raw_ptr.rs  table.rs  types.rs  unknown.rs  util.rs
core/tests/: test_multi_root_vms.rs  test_vm_backtrace.rs  test_vm_closures.rs  test_vm_custom_from_param.rs  test_vm_custom_structs.rs  test_vm_destructor.rs  test_vm_files.rs  test_vm_functions.rs  test_vm_integer53.rs  test_vm_integer64.rs  test_vm_interrupt.rs  test_vm_jit_options.rs  test_vm_libs.rs  test_vm_multivalue.rs  test_vm_registry.rs  test_vm_run.rs  test_vm_run_string.rs  test_vm_safety.rs  test_vm_tables.rs  test_vm_threads.rs  test_vm_userdata.rs
core/tests/lua/: basic.lua  broken.lua  class.lua
core/tests/safety/: test_destructor_arc_not_send.rs  test_destructor_arc_not_send.stderr  test_destructor_arc_not_sync.rs  test_destructor_arc_not_sync.stderr  test_destructor_box_not_send.rs  test_destructor_box_not_send.stderr  test_destructor_rc_not_send.rs  test_destructor_rc_not_send.stderr  test_multi_root_vms_not_send.rs  test_multi_root_vms_not_send.stderr  test_rclosure_not_send.rs  test_rclosure_not_send.stderr  test_scope_safe_1.rs  test_scope_safe_1.stderr  test_scope_safe_2.rs  test_scope_safe_2.stderr  test_scope_safe_3.rs  test_scope_safe_3.stderr  test_vm_threads_unsafe_type.rs  test_vm_threads_unsafe_type.stderr
definitions/: bp3d.files.lua  bp3d.lua.debug.lua  bp3d.lua.lua  bp3d.lua.shell.lua  bp3d.os.lua  bp3d.util.lua
patch/: disable_lua_load.patch  lib_init.patch  lj_disable_jit.patch  lua_ext.patch  lua_ext_ccatch_error.patch  lua_ext_provenance.patch  lua_load_no_bc.patch  luajit.patch  windows_set_lib_names.patch
shell/core/: Cargo.toml  build.rs
shell/core/src/: autocomplete.rs  core.rs  data.rs  data_in.rs  data_out.rs  lua.rs  main.rs  scheduler.rs  scheduler_api.rs
shell/core/src/lib1/: autocomplete_api.rs  mod.rs  scheduler_api.rs
shell/proto/: Cargo.toml  build.rs  protoc.toml
shell/proto/src/: completion.json5  lib.rs  recv.json5  send.json5
src/: lib.rs  util.rs  value.rs  vm.rs
src/ffi/: laux.rs  lua.rs  mod.rs
src/macros/: lib_func.rs  mod.rs
src/vm/: core.rs  error.rs  function.rs  mod.rs  util.rs  value.rs
src/vm/function/: core.rs  interface.rs  mod.rs  table.rs
src/vm/value/: core.rs  interface.rs  mod.rs  table.rs
testbin/: Cargo.toml
testbin/.cargo/: config
testbin/src/: context.rs  context_opt.rs  context_opt2.rs  main.rs
tests/: test_vm_destructor.rs
