[package]
name = "bp3d-lua-codegen"
version = "0.1.0"
edition = "2021" #Due to gen be a reserved keyword!
publish = false

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "2.0.98", features = ["full"] }
proc-macro2 = "1.0.26"
cargo-manifest = "0.19.1"
itertools = { version = "0.14.0" }
