[package]
name = "bp3d-lua"
version = "1.0.0-rc.1.0.0"
authors = ["Yuri Edward <yuri6037@outlook.com>"]
edition = "2021"
description = "Lua wrapper and base library for BP3D."
license = "BSD-3-Clause"
repository = "https://gitlab.com/bp3d/lua"
readme = "../README.MD"
keywords = ["lua"]
categories = ["graphics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bp3d-util = { version = "2.0.1", features = ["simple-error", "format", "string"] }
log = "0.4.26"
bp3d-lua-codegen = { version = "0.1.0", path = "../codegen" }
bp3d-debug = "1.0.0-rc.6.1.0"
bp3d-os = { version = "1.0.0-rc.4.2.1", features = ["fs", "time"] }
time = { version = "0.3.37", features = ["formatting"] }
itertools = { version = "0.14.0" }

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2.170", optional = true }

[build-dependencies]
bp3d-os = { version = "1.0.0-rc.4.2.1", features = ["fs"] }
phf = { version = "0.11.3", features = ["macros"] }
cc = "1.2.15"

[features]
interrupt = ["libc"]
