[package]
name = "bp3d-lua"
version = "1.0.0-rc.1.0.0"
authors = ["Yuri Edward <yuri6037@outlook.com>"]
edition = "2021"
description = "Lua wrapper and base library for BP3D."
license = "BSD-3-Clause"
repository = "https://gitlab.com/bp3d/lua"
readme = "../README.MD"
keywords = ["lua"]
categories = ["graphics"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bp3d-util = { version = "2.2.0", features = ["simple-error", "format", "string"] }
bp3d-debug = "1.0.0-rc.6.2.0"
bp3d-os = { version = "1.0.0-rc.4.2.1", features = ["time"], optional = true }
time = { version = "0.3.37", features = ["formatting"], optional = true }
itertools = { version = "0.14.0" }
bp3d-lua-codegen = { version = "0.1.0", path = "../codegen", optional = true }

[dev-dependencies]
bp3d-lua-codegen = { version = "0.1.0", path = "../codegen" }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59.0", features = ["Win32_System_Threading", "Win32_System_Kernel", "Win32_System_Diagnostics", "Win32_System_Diagnostics_Debug"], optional = true }

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2.170", optional = true }

[build-dependencies]
bp3d-lua-build = { version = "1.0.0-rc.1.0.0", path = "../build" }
rustc_version = { version = "0.4.1", optional = true }

[features]
interrupt = ["libc", "windows-sys", "root-vm"]
dynamic = []
module = ["libs-core", "bp3d-lua-codegen", "rustc_version"]
root-vm = []
util-method = []
util-function = []
util-namespace = []
util-module = ["libc", "module"]
libs-core = ["util-namespace"]
libs = ["libs-core", "time", "bp3d-os"]
