[package]
name = "testbin"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mlua = { version = "0.10.3", features = ["luajit", "vendored"] }
bp3d-lua = { version = "0.2.0", path = "../core" }
